# cvlr-soroban

./: Cargo.toml  README.md
cvlr-soroban/: Cargo.toml
cvlr-soroban-derive/: Cargo.toml
cvlr-soroban-derive/src/: lib.rs  mock_client.rs  rule.rs
cvlr-soroban-macros/: Cargo.toml
cvlr-soroban-macros/src/: apply_summary.rs
cvlr-soroban/src/: lib.rs  log.rs  nondet.rs
