[workspace]
resolver = "2"
members = ["cvlr-soroban", "cvlr-soroban-macros", "cvlr-soroban-derive"]

[workspace.package]
version = "0.3.0"
authors = ["Certora"]
description = "Certora Verification Language for Rust with Soroban"
documentation = "https://certora.com"

[workspace.dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
macrotest = "1"
trybuild = "1"

soroban-sdk = "22"


cvlr-asserts = { git = "https://github.com/Certora/cvlr.git", version = "0.4" }
cvlr-nondet = { git = "https://github.com/Certora/cvlr.git", default-features = false, version = "0.4" }
cvlr-log = { git = "https://github.com/Certora/cvlr.git", default-features = false, version = "0.4" }
